# dsit-whos-who

./: .gitignore  README.md  name_pipeline.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters_author_disambiguation.yml  parameters_data_analysis.yml  parameters_data_collection_gtr.yml  parameters_data_collection_oa.yml  parameters_global.yml
notebooks/: README.md  handover_notebook.html  handover_notebook.ipynb
notebooks/handover_notebook_files/libs/bootstrap/: bootstrap-73aca2f6d4ae10701d8f99b2256a409d.min.css  bootstrap-de5f75ba0e9a74f6dd9045a57a301c09.min.css
src/dsit_whos_who/: __init__.py  __main__.py  plan.md  settings.py
src/dsit_whos_who/pipelines/author_disambiguation/: README.md  __init__.py  nodes.py  pipeline.py
src/dsit_whos_who/pipelines/data_analysis_basic_metrics/: README.md  nodes.py  pipeline.py
src/dsit_whos_who/pipelines/data_analysis_basic_metrics/utils/: affiliation_metrics.py  basic_metrics.py  collecting.py  processing.py  publication_metrics.py
src/dsit_whos_who/pipelines/data_analysis_complex_metrics/: README.md  __init__.py  nodes.py  pipeline.py
src/dsit_whos_who/pipelines/data_analysis_complex_metrics/utils/: cd_index.py  complex_metrics.py  discipline_diversity.py  embeddings.py
src/dsit_whos_who/pipelines/data_analysis_disciplinarity/: nodes.py  pipeline.py
src/dsit_whos_who/pipelines/data_collection_gtr/: README.md  __init__.py  nodes.py  pipeline.py  utils.py
src/dsit_whos_who/pipelines/data_collection_oa/: README.md  __init__.py  nodes.py  pipeline.py  utils_old.py
(+16 files in other folders)
